# Self-Balancing-Robot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  HANDOFF.md  Makefile  README.md
.github/workflows/: ci.yml
docs/: architecture.md  build-log.md  control_tuning.md  hardware.md  improvement_plan.md  security.md  setup.md  simulation.md  windows-wsl.md
firmware/: .gitignore  README.md  microros_extra_packages.py  platformio.ini
firmware/extra_packages/: sbr_msgs
firmware/include/: sbr_config.hpp
firmware/lib/sbr_control/: balance_controller.cpp  library.json  pid.cpp  sbr_control
firmware/src/: main.cpp  mpu6050.hpp  tb6612.hpp
src/sbr_bringup/: package.xml  setup.cfg  setup.py
src/sbr_bringup/config/: sbr_params.yaml
src/sbr_bringup/launch/: robot.launch.py
src/sbr_bringup/test/: test_params.py
src/sbr_control/: CMakeLists.txt  package.xml
src/sbr_control/include/sbr_control/: balance_controller.hpp  pid.hpp
src/sbr_control/src/: balance_controller.cpp  balance_controller_node.cpp  pid.cpp
src/sbr_control/test/: test_balance_controller.cpp  test_pid.cpp
src/sbr_description/: CMakeLists.txt  package.xml
src/sbr_description/launch/: display.launch.py
src/sbr_description/rviz/: sbr.rviz
src/sbr_description/urdf/: sbr.gazebo.xacro  sbr.urdf.xacro
src/sbr_drivers/: package.xml  setup.cfg  setup.py
src/sbr_drivers/sbr_drivers/: imu_node.py  motor_node.py  mpu6050.py
src/sbr_drivers/test/: test_mpu6050.py
src/sbr_msgs/: CMakeLists.txt  package.xml
src/sbr_msgs/msg/: BalanceState.msg
src/sbr_simulation/: CMakeLists.txt  package.xml
src/sbr_simulation/config/: controllers.yaml  gz_bridge.yaml  sim_balance.yaml
src/sbr_simulation/launch/: simulation.launch.py
src/sbr_simulation/worlds/: empty.sdf
